# reportMail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
examples/: branded_report.html  branded_report.py  sales_report.html  sales_report.py  send_email_report.py  weekly_business_report.html  weekly_business_report.py
src/reportmail/: __init__.py  exceptions.py  formatters.py  rendering.py  report.py  utils.py
src/reportmail/components/: __init__.py  base.py  chart.py  divider.py  kpi.py  section.py  spacer.py  table.py  text.py
src/reportmail/themes/: __init__.py  base.py  dark.py  light.py
tests/: test_chart.py  test_email_example.py  test_formatters.py  test_kpi.py  test_report.py  test_table.py  test_themes.py
