[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "reportmail"
version = "0.1.0"
description = "Email-first HTML reports for Python teams"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "reportmail contributors" }]
keywords = ["email", "reports", "analytics", "pandas", "matplotlib"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
]
dependencies = ["pandas>=1.5", "matplotlib>=3.6"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.5", "mypy>=1.8", "pandas-stubs>=2"]
plotly = ["plotly>=5", "kaleido>=0.2"]

[project.urls]
Homepage = "https://github.com/your-org/reportmail"
Repository = "https://github.com/your-org/reportmail"
Issues = "https://github.com/your-org/reportmail/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/reportmail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["reportmail"]
follow_imports = "skip"
ignore_missing_imports = true
no_site_packages = true
