[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "reportmail"
dynamic = ["version"]
description = "Email-first HTML reports for Python teams"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "reportmail contributors" }]
keywords = ["email", "reports", "analytics", "pandas", "matplotlib"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Communications :: Email",
]
dependencies = ["pandas>=1.5", "matplotlib>=3.6"]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.8",
  "pandas-stubs>=2",
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.5",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/akpradhn/reportMail"
Repository = "https://github.com/akpradhn/reportMail.git"
Issues = "https://github.com/akpradhn/reportMail/issues"
Changelog = "https://github.com/akpradhn/reportMail/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/reportmail/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/reportmail"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/examples/*.html",
  "/uv.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["reportmail"]
follow_imports = "skip"
ignore_missing_imports = true
no_site_packages = true
